<?xml version="1.0"?>
<package format="2">
  <name>z1_controller</name>
  <version>0.0.0</version>
  <description>The z1_controller package</description>
  <maintainer email="gmin1999@kookmin.ac.kr">kim</maintainer>

  <url type="notion">https://www.notion.so/Unitree-Z1-52d867815ca745f5850a5e4531482b0a</url>
  <url type="github"></url>


  <license>MIT</license>


 controller_manager
 joint_state_controller
 robot_state_publisher
 roscpp
 gazebo_ros
 std_msgs
 tf
 geometry_msgs
 urdf
 xacro

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
